multitenancy-benchmarks/require-resource-quota/.kyverno-test/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-resource-quota
spec: {}
