multitenancy-benchmarks/require-resource-quota/require-resource-quota.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: require-resource-quota
  annotations:
    policies.kyverno.io/title: Require Resource Quota
    policies.kyverno.io/category: Multitenancy Benchmarks
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    policies.kyverno.io/description: >-
      In cases such as multi-tenancy where new Namespaces must be fully
      provisioned before they can be used, it may not be easy to declare and
      understand if/when the Namespace is ready. Having a policy which defines
      all the resources which are required for each Namespace can assist in determining
      compliance. This policy, expected to be run in background mode only, performs a Namespace
      check to ensure that all Namespaces have a ResourceQuota.
      Additional rules may be written to extend the check for your needs. By default, background
      scans occur every one hour which may be changed with an additional container flag. Please
      see the installation documentation for details.
spec:
  background: true
  validationFailureAction: Audit
  rules:
  - name: resourcequotas
    match:
      any:
      - resources:
          kinds:
          - Namespace
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kube-public
          - kube-node-lease
          - kyverno
    context:
    - name: resourcequotas
      apiCall:
        urlPath: "/api/v1/namespaces/{{request.object.metadata.name}}/resourcequotas"
        jmesPath: "items[] | length(@)"
    validate:
      message: "Every Namespace must have at least one ResourceQuota."
      deny:
        conditions:
          all:
          - key: "{{ resourcequotas }}"
            operator: Equals
            value: 0
