multitenancy-benchmarks/require-resource-quota/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-resource-quota
policies:
- ../require-resource-quota.yaml
resources:
- resource.yaml
results:
- kind: Namespace
  policy: require-resource-quota
  resources:
  - ns-resource-quota
  result: fail
  rule: require-resource-quota
variables: values.yaml
