multitenancy-benchmarks/require-resource-quota/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: require-resource-quota
  rules:
  - name: require-resource-quota
    values:
      policies_count: "0"
